# cellular-automaton

./: .gitignore  Cargo.toml  README.md  build.sh  publish.sh
pkg/: README.md  ca.d.ts  ca.js  ca_bg.js  ca_bg.wasm  ca_bg.wasm.d.ts  package.json
src/: lib.rs
src/automaton/: mod.rs  rules.rs  ruleset.rs
src/automaton_life_like/: mod.rs  ruleset.rs  tests.rs
src/rules/: bs.rs  bsc.rs  bsg.rs  mod.rs  types.rs
tests/: web.rs
