[package]
name = "cellular-automaton"
description = "A cellular automaton simulation library with WebAssembly as a target."
version = "0.1.2"
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/cellular-automaton"
homepage = "https://github.com/tedbyron/cellular-automaton"
documentation = "https://docs.rs/cellular-automaton/"
readme = "README.md"
keywords = ["wasm", "webassembly", "game-of-life", "cellular-automaton", "cellular-automata"]
categories = ["wasm", "games"]
license = "MIT"
edition = "2018"
exclude = [
    "/pkg/",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
getrandom = { version = "0.2.3", features = ["js"] }
rand = "0.8.4"
wasm-bindgen = "0.2.75"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "fat"
