[package]
name = "cellular-automaton"
description = "A cellular automaton simulation library targeting WebAssembly."
version = "0.1.8"
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/cellular-automaton"
homepage = "https://github.com/tedbyron/cellular-automaton"
documentation = "https://docs.rs/cellular-automaton/"
readme = "README.md"
keywords = ["wasm", "webassembly", "game-of-life", "cellular-automaton", "cellular-automata"]
categories = ["wasm", "games"]
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = [
    "/pkg/",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc", "wasm-bindgen"]

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
# select feature based on target
# https://github.com/rust-lang/cargo/issues/1197
getrandom = { version = "0.2.3", features = ["js"] }
# js-sys = "0.3.52"
rand = "0.8.4"
wasm-bindgen = { version = "0.2.75", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.25"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
